# python-zenmoney

./: .gitignore  pyproject.toml  settings.py  ts.py  zen.py
zenmoney/: oauth2.py
